# cloudods_func

./: .gitignore  CLAUDE.md  README-2-0.md  function_app.py  local.settings.azure.json  local.settings.local.json  logging_config.py  pyproject.toml  run.ps1
cicd-pipelines/: bodm-pipelines.yml
cicd-pipelines/pipeline_app_variables/: global_variables.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
scripts/: apps.ps1  configure-env.ps1  docker-stack.ps1  migrate.ps1  quality.ps1  seed-storage.ps1
src/cloudods_func/: main.py
tests/: test_main.py
